--- a/rfp-backend/package.json
+++ b/rfp-backend/package.json
@@ -17,12 +17,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^5.2.1",
+    "nodemailer": "^7.0.11",
     "openai": "^6.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^20.19.25",
+    "@types/nodemailer": "^7.0.4",
     "prisma": "^6.18.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.0"
